--- a/Monorail/BLEAdvertisementWatcherPage.xaml
+++ b/Monorail/BLEAdvertisementWatcherPage.xaml
@@ -43,16 +43,16 @@
 
         <StackPanel Margin="0,10,0,10" Grid.Row="0">
 
-            <TextBlock Style="{StaticResource ScenarioHeaderTextStyle}" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
+            <TextBlock Style="{StaticResource ScenarioDescriptionTextStyle}" Margin="0,10,0,10" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
             
             <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Margin="0,0,0,0"/>
+                <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Width="50" Height="40" Margin="0,10,0,10"/>
             </StackPanel>
         
         </StackPanel>
 
         <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,10" BorderBrush="AntiqueWhite" BorderThickness="1">
-            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothDevice, Mode=OneWay}"/>
+            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothDevice, Mode=OneWay}" />
         </ScrollViewer>
 
         <StackPanel Grid.Row="2" x:Name="StatusPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
