--- a/Monorail/BLEAdvertisementWatcherPage.xaml
+++ b/Monorail/BLEAdvertisementWatcherPage.xaml
@@ -18,7 +18,7 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*" MinWidth="100"/>
                 </Grid.ColumnDefinitions>
-
+                
                 <StackPanel Grid.Column="1" Margin="5">
                     <TextBlock>
                         Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/>
@@ -33,7 +33,7 @@
 
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="12,12,12,12">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="5,5,5,5">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -41,27 +41,27 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Margin="0,10,0,10" Grid.Row="0">
+        <StackPanel Margin="0,0,0,0" Grid.Row="0">
 
-            <TextBlock Style="{StaticResource ScenarioDescriptionTextStyle}" Margin="0,10,0,10" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
             
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Width="50" Height="40" Margin="0,10,0,10"/>
+            <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
+                <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Width="50" Height="40" />
             </StackPanel>
         
         </StackPanel>
 
-        <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,10,0,10" BorderBrush="AntiqueWhite" BorderThickness="1">
+        <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,0,0,5" BorderBrush="AntiqueWhite" BorderThickness="1">
             <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothDevice, Mode=OneWay}" />
         </ScrollViewer>
 
-        <StackPanel Grid.Row="2" x:Name="StatusPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
+        <StackPanel Margin="0,0,0,0" Grid.Row="2" x:Name="StatusPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
             
-            <TextBlock x:Name="StatusLabel" Margin="0,10,0,10" TextWrapping="Wrap" Text="Status : " />
+            <TextBlock x:Name="StatusLabel" Margin="0,0,0,5" TextWrapping="Wrap" Text="Status : " />
             
             <Border x:Name="StatusBorder" Margin="0,0,0,0">
                 <ScrollViewer VerticalScrollMode="Auto"  VerticalScrollBarVisibility="Auto">
-                    <TextBlock x:Name="StatusBlock" FontWeight="Bold" MaxWidth="{Binding ElementName=Splitter, Path=ActualWidth}" Margin="10,10,10,10" TextWrapping="Wrap" />
+                    <TextBlock x:Name="StatusBlock" FontWeight="Bold" MaxWidth="{Binding ElementName=Splitter, Path=ActualWidth}" Margin="5,5,5,5" TextWrapping="Wrap" />
                 </ScrollViewer>
             </Border>
             
