--- a/Monorail/BLEAdvertisementWatcherPage.xaml
+++ b/Monorail/BLEAdvertisementWatcherPage.xaml
@@ -12,23 +12,11 @@
                 
         <DataTemplate x:Key="ResultsListViewTemplate" x:DataType="local:BluetoothDevice">
 
-            <Grid Margin="5">
+            <StackPanel Orientation="Vertical">
+                <TextBlock>Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/></TextBlock>
+                <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/>, Strength : <Run Text="{x:Bind Strength, Mode=OneWay}"/> dbm</TextBlock>
+            </StackPanel>
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*" MinWidth="100"/>
-                </Grid.ColumnDefinitions>
-                
-                <StackPanel Grid.Column="1" Margin="5">
-                    <TextBlock>
-                        Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/>
-                    </TextBlock>
-                    <TextBlock>
-                        Address : <Run Text="{x:Bind Address, Mode=OneWay}"/>, Strength : <Run Text="{x:Bind Strength, Mode=OneWay}"/> dbm
-                    </TextBlock>
-                </StackPanel>
-
-            </Grid>
         </DataTemplate>
 
     </Page.Resources>
@@ -52,7 +40,7 @@
         </StackPanel>
 
         <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,0,0,5" BorderBrush="AntiqueWhite" BorderThickness="1">
-            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothDevice, Mode=OneWay}" />
+            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothDevice, Mode=OneWay}"   SelectionChanged="ResultsListView_SelectionChanged"  ItemClick="ResultsListView_ItemClick" />
         </ScrollViewer>
 
         <StackPanel Margin="0,0,0,0" Grid.Row="2" x:Name="StatusPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
