--- a/Monorail/BLEPairedDevicePage.xaml
+++ b/Monorail/BLEPairedDevicePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Monorail.BLEAdvertisementWatcherPage"
+    x:Class="Monorail.BLEPairedDevicePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Monorail"
@@ -14,7 +14,7 @@
 
             <StackPanel Orientation="Vertical">
                 <TextBlock>Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/></TextBlock>
-                <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/>, Strength : <Run Text="{x:Bind Strength, Mode=OneWay}"/> dbm</TextBlock>
+                <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/></TextBlock>
             </StackPanel>
 
         </DataTemplate>
@@ -31,7 +31,7 @@
 
         <StackPanel Margin="0,0,0,0" Grid.Row="0">
 
-            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate BLE Paired Device.</TextBlock>
             
             <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                 <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Width="50" Height="40" />
