--- a/Microbit/Scenario2_Device.xaml
+++ b/Microbit/Scenario2_Device.xaml
@@ -1,11 +1,12 @@
-<Page
-    x:Class="Microbit.Scenario1_Advertisement"
+﻿<Page
+    x:Class="Microbit.Scenario2_Device"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:Microbit"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:Microbit"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
 
@@ -13,7 +14,7 @@
 
             <StackPanel Orientation="Vertical">
                 <TextBlock>Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/></TextBlock>
-                <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/>, Strength : <Run Text="{x:Bind Strength, Mode=OneWay}"/> dbm</TextBlock>
+                <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/></TextBlock>
             </StackPanel>
 
         </DataTemplate>
@@ -29,7 +30,7 @@
 
         <StackPanel Margin="0,0,0,0" Grid.Row="0">
 
-            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate BLE Paired Device.</TextBlock>
 
             <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                 <Button x:Name="EnumerateButton" Content="Run" Click="{x:Bind EnumerateButton_Click}" Width="50" Height="40" />
@@ -38,7 +39,7 @@
         </StackPanel>
 
         <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,0,0,5" BorderBrush="AntiqueWhite" BorderThickness="1">
-            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}" SelectionChanged="ResultsListView_SelectionChanged" />
+            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}"   SelectionChanged="ResultsListView_SelectionChanged" />
         </ScrollViewer>
 
     </Grid>
