--- a/Microbit/Scenario2_Device.xaml
+++ b/Microbit/Scenario2_Device.xaml
@@ -15,6 +15,7 @@
             <StackPanel Orientation="Vertical">
                 <TextBlock>Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/></TextBlock>
                 <TextBlock>Address : <Run Text="{x:Bind Address, Mode=OneWay}"/></TextBlock>
+                <TextBlock>Paired : <Run Text="{x:Bind Paired, Mode=OneWay}"/></TextBlock>
             </StackPanel>
 
         </DataTemplate>
@@ -39,7 +40,7 @@
         </StackPanel>
 
         <ScrollViewer VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Grid.Row="1" Margin="0,0,0,5" BorderBrush="AntiqueWhite" BorderThickness="1">
-            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}"   SelectionChanged="ResultsListView_SelectionChanged" />
+            <ListView x:Name="ResultsListView" ItemTemplate="{StaticResource ResultsListViewTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}" SelectionChanged="ResultsListView_SelectionChanged" />
         </ScrollViewer>
 
     </Grid>
