--- a/Microbit/Scenario1_Advertisement.xaml
+++ b/Microbit/Scenario1_Advertisement.xaml
@@ -10,7 +10,7 @@
 
     <Page.Resources>
 
-        <DataTemplate x:Key="ResultsListViewTemplate" x:DataType="local:BluetoothLEDeviceDisplay">
+        <DataTemplate x:Key="ResultsListViewTemplate" x:DataType="local:">
 
             <StackPanel Orientation="Vertical">
                 <TextBlock>Name : <Run Text="{x:Bind Name, Mode=OneWay}" FontWeight="Bold"/></TextBlock>
