--- a/Monorail/TextToSpeechPage.xaml
+++ b/Monorail/TextToSpeechPage.xaml
@@ -10,23 +10,27 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="1280" Width="720">
 
-        <StackPanel>
+        <RelativePanel>
 
-            <ComboBox x:Name="comboBox1" SelectionChanged="ComboBox1_SelectionChanged" Width="200">
-                <x:String>Justine</x:String>
-                <x:String>Pauline</x:String>
-                <x:String>Emmanuel</x:String>
-            </ComboBox>
+            <StackPanel>
 
-            <Button x:Name="btn1" Click="Speak1_Click" Content="Speak1" Width="100" />
-            <Button x:Name="btn2" Click="Speak2_Click" Content="Speak2" Width="100" />
-            <Button x:Name="btn3" Click="Speak3_Click" Content="Speak3" Width="100" />
-            <Button x:Name="btn4" Click="Speak4_Click" Content="Speak4" Width="100" />
-            <Button x:Name="btn5" Click="Speak5_Click" Content="La Bourse" Width="100" />
-            <Button x:Name="btn6" Click="Speak6_Click" Content="Microsoft" Width="100" />
-            <Button x:Name="btn7" Click="Speak7_Click" Content="Votez FO" Width="100" />
+                <ComboBox x:Name="comboBox1" SelectionChanged="ComboBox1_SelectionChanged" Width="200">
+                    <x:String>Justine</x:String>
+                    <x:String>Pauline</x:String>
+                    <x:String>Emmanuel</x:String>
+                </ComboBox>
 
-        </StackPanel>
+                <Button x:Name="btn1" Click="Speak1_Click" Content="Speak1" Width="100" />
+                <Button x:Name="btn2" Click="Speak2_Click" Content="Speak2" Width="100" />
+                <Button x:Name="btn3" Click="Speak3_Click" Content="Speak3" Width="100" />
+                <Button x:Name="btn4" Click="Speak4_Click" Content="Speak4" Width="100" />
+                <Button x:Name="btn5" Click="Speak5_Click" Content="La Bourse" Width="100" />
+                <Button x:Name="btn6" Click="Speak6_Click" Content="Microsoft" Width="100" />
+                <Button x:Name="btn7" Click="Speak7_Click" Content="Votez FO" Width="100" />
+
+            </StackPanel>
+
+        </RelativePanel>
 
     </Grid>
 
