--- a/Monorail/MainPage.xaml
+++ b/Monorail/MainPage.xaml
@@ -8,60 +8,98 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Page.Resources>
+
+        <local:ScenarioLogoBindingConverter x:Key="ScenarioLogoConverter"></local:ScenarioLogoBindingConverter>
+
+        <local:ScenarioBindingConverter x:Key="ScenarioConverter"></local:ScenarioBindingConverter>
+
+        <DataTemplate x:Key="ScenarioControlTemplate">
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="30" Text="{Binding Converter={StaticResource ScenarioLogoConverter}}" Width="50" />
+                <TextBlock FontFamily="Segoe UI" FontSize="12" Text="{Binding Converter={StaticResource ScenarioConverter}}" VerticalAlignment="Center" />
+            </StackPanel>
+
+        </DataTemplate>
+
+    </Page.Resources>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <RelativePanel Grid.Row="0">
-            <Button Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Width="50" Height="40" Content="&#xE700;" FontSize="30" Click="HamburgerButton_Click" />
-            <TextBlock x:Name="SampleTitle" Text="Télécommande du Monorail en LEGO" Style="{StaticResource PageHeaderTextStyle}" TextWrapping="Wrap" Margin="60,10,0,0" />
-        </RelativePanel>
+        <StackPanel x:Name="HeaderPanel" Orientation="Horizontal" Grid.Row="0">
 
-        <SplitView Name="MySplitView" Grid.Row="1" DisplayMode="CompactOverlay" OpenPaneLength="300" CompactPaneLength="50" HorizontalAlignment="Left">
-            
-            <SplitView.Content>
-                <Frame Name="MyFrame"></Frame>
-            </SplitView.Content>
-            
+            <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+                <ToggleButton Style="{StaticResource SymbolButtonStyle}" Click="Button_Click" VerticalAlignment="Top" Width="50" Foreground="{ThemeResource ApplicationForegroundThemeBrush}">
+                    <ToggleButton.Content>
+                        <FontIcon x:Name="Hamburger" FontFamily="Segoe MDL2 Assets" FontSize="30" Glyph="&#xE700;" />
+                    </ToggleButton.Content>
+                </ToggleButton>
+            </Border>
+
+            <Image x:Name="WindowsLogo" Stretch="None" Source="Assets/windows-sdk.png" AutomationProperties.AccessibilityView="Raw" />
+
+            <TextBlock x:Name="App_Title" FontFamily="Segoe UI" FontSize="12" Text="Application title" Style="{StaticResource PageHeaderTextStyle}" TextWrapping="Wrap" Margin="0,10,0,0" />
+
+        </StackPanel>
+
+        <SplitView x:Name="Splitter" Grid.Row="1" IsPaneOpen="False" DisplayMode="CompactOverlay" CompactPaneLength="50">
+
             <SplitView.Pane>
 
-                <ListBox SelectionMode="Single" Name="IconsListBox" SelectionChanged="IconsListBox_SelectionChanged">
+                <RelativePanel HorizontalAlignment="Left">
 
-                    <ListBoxItem Name="BLEPairedDeviceListBoxItem">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="30" Text="&#xE702;" />
-                            <TextBlock FontFamily="Segoe UI" Text="Liste des des appareils BLE appairés" FontSize="12" Margin="20,0,0,0" VerticalAlignment="Center" />
+                    <ListBox x:Name="ScenarioControl" SelectionChanged="ScenarioControl_SelectionChanged" AutomationProperties.Name="Scenarios" SelectionMode="Single" ItemTemplate="{StaticResource ScenarioControlTemplate}" Background="Transparent" BorderThickness="0" VerticalAlignment="Top" RelativePanel.AlignTopWithPanel="True"/>
+
+                    <StackPanel x:Name="FooterPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True">
+
+                        <Image Source="Assets/microsoft-sdk.png" AutomationProperties.Name="Microsoft Logo" Stretch="None" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+
+                        <TextBlock x:Name="Copyright" Text="&#xA9; Microsoft Corporation. All rights reserved." Style="{StaticResource CopyrightTextStyle}" RelativePanel.Above="LinksPanel" Margin="10,10,0,0" TextWrapping="Wrap"/>
+
+                        <StackPanel x:Name="LinksPanel" Orientation="Horizontal" Margin="10,10,0,10">
+
+                            <HyperlinkButton Content="Trademarks" Tag="http://go.microsoft.com/fwlink/?LinkID=623755" Click="Footer_Click" FontSize="12" Style="{StaticResource HyperlinkStyle}" />
+
+                            <TextBlock Text="|" Style="{StaticResource SeparatorStyle}" VerticalAlignment="Center" />
+
+                            <HyperlinkButton x:Name="PrivacyLink" Content="Privacy" Tag="http://privacy.microsoft.com" Click="Footer_Click" FontSize="12" Style="{StaticResource HyperlinkStyle}"/>
+
                         </StackPanel>
-                    </ListBoxItem>
 
-                    <ListBoxItem Name="BLEAdvertisementWatcherListBoxItem">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="30" Text="&#xE702;" />
-                            <TextBlock FontFamily="Segoe UI" Text="Détection des appareils BLE Advertisement" FontSize="12" Margin="20,0,0,0" VerticalAlignment="Center" />
-                        </StackPanel>
-                    </ListBoxItem>
+                    </StackPanel>
 
-                    <ListBoxItem Name="MicrobitListBoxItem">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="30" Text="&#xE787;" />
-                            <TextBlock FontFamily="Segoe UI" Text="Gestion de la carte micro:bit" FontSize="12" Margin="20,0,0,0" VerticalAlignment="Center" />
-                        </StackPanel>
-                    </ListBoxItem>
+                </RelativePanel>
 
-                    <ListBoxItem Name="TextToSpeechListBoxItem">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="30" Text="&#xE767;" />
-                            <TextBlock FontFamily="Segoe UI" Text="Test de synthèse vocale" FontSize="12" Margin="20,0,0,0" VerticalAlignment="Center" />
-                        </StackPanel>
-                    </ListBoxItem>
-
-                </ListBox>
-                
             </SplitView.Pane>
-            
+
+            <SplitView.Content>
+
+                <RelativePanel>
+
+                    <Frame x:Name="ScenarioFrame" RelativePanel.AlignTopWithPanel="True" RelativePanel.Above="StatusPanel" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
+
+                    <StackPanel x:Name="StatusPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
+
+                        <TextBlock x:Name="StatusLabel" Margin="10,0,0,10" TextWrapping="Wrap" Text="Status:" />
+
+                        <Border x:Name="StatusBorder" Margin="0,0,0,0">
+                            <ScrollViewer VerticalScrollMode="Auto"  VerticalScrollBarVisibility="Auto" MaxHeight="200">
+                                <TextBlock x:Name="StatusBlock" FontWeight="Bold" AutomationProperties.LiveSetting="Assertive" MaxWidth="{Binding ElementName=Splitter, Path=ActualWidth}" Margin="10,10,10,20" TextWrapping="Wrap" />
+                            </ScrollViewer>
+                        </Border>
+
+                    </StackPanel>
+
+                </RelativePanel>
+
+            </SplitView.Content>
+
         </SplitView>
 
     </Grid>
