--- a/Monorail/Scenario1_PairingDevice.xaml
+++ b/Monorail/Scenario1_PairingDevice.xaml
@@ -43,15 +43,29 @@
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                    <Image x:Name="ImageMicrobit" Width="80" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,0" />
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Micro:bit board known.</TextBlock>
+                
+                <StackPanel Orientation="Horizontal">
+                    
+                    <Image x:Name="ImageMicrobit" Width="80" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                    
+                    <StackPanel Orientation="Vertical">
+                        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="170">
+                            <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+                                <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                                <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                            </StackPanel>
+
+                        </ScrollViewer>
+                    </StackPanel>
+                    
                 </StackPanel>
                 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Button x:Name="ButtonRed" FontSize="10" Content="Rouge" Click="{x:Bind ButtonRed_Click}" Width="50" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonBlue" FontSize="10" Content="Bleu" Click="{x:Bind ButtonBlue_Click}" Width="50" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonYellow" FontSize="10" Content="Jaune" Click="{x:Bind ButtonYellow_Click}" Width="50" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonGreen" FontSize="10" Content="Vert" Click="{x:Bind ButtonGreen_Click}" Width="50" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonRed" Style="{StaticResource ButtonStyle}" Content="Rouge" Click="{x:Bind ButtonRed_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonBlue" Style="{StaticResource ButtonStyle}" Content="Bleu" Click="{x:Bind ButtonBlue_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonYellow" Style="{StaticResource ButtonStyle}" Content="Jaune" Click="{x:Bind ButtonYellow_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonGreen" Style="{StaticResource ButtonStyle}" Content="Vert" Click="{x:Bind ButtonGreen_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                 </StackPanel>
             
             </StackPanel>
@@ -64,7 +78,7 @@
 
                 <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement.</TextBlock>
 
-                <Button x:Name="EnumerateButtonAdvertisement" Content="Run" Click="{x:Bind EnumerateButtonAdvertisement_Click}" Width="50" Height="40" Margin="0,0,0,5" />
+                <Button x:Name="EnumerateButtonAdvertisement" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonAdvertisement_Click}" Width="60" Height="30" Margin="0,0,5,0" />
 
                 <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" Grid.Row="1" Margin="0,0,0,5" BorderBrush="White" BorderThickness="1" Height="50">
                     <ListView x:Name="ResultsListViewAdvertisement" ItemTemplate="{StaticResource ResultsListViewAdvertisementTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}" SelectionChanged="ResultsListViewAdvertisement_SelectionChanged" />
@@ -80,8 +94,8 @@
 
                 <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate Paired BLE Device.</TextBlock>
 
-                <Button x:Name="EnumerateButtonDevice" Content="Run" Click="{x:Bind EnumerateButtonDevice_Click}" Width="50" Height="40" Margin="0,0,0,5" />
-
+                <Button x:Name="EnumerateButtonDevice" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonDevice_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                
                 <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" Grid.Row="1" Margin="0,0,0,5" BorderBrush="White" BorderThickness="1" Height="50">
                     <ListView x:Name="ResultsListViewDevice" ItemTemplate="{StaticResource ResultsListViewDeviceTemplate}" ItemsSource="{x:Bind listDeviceInformationDisplay, Mode=OneWay}" SelectionMode="Single" SelectionChanged="ResultsListViewDevice_SelectionChanged" />
                 </ScrollViewer>
